Adding kudo controller e repository

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Magic Kudos</title>
+    <title>HOME</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<p>Index page</p>
+<p>Home page</p>
 <a href="/users">/users</a>
-<a href="/test">/test</a>
+<a href="/">/</a>
 </body>
 </html>
